index file structure

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documenat</title>
+    <title>Will you be my valentine?</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <div class="content">
+        <h1 id="title">Hi</h1>
+        <div class="gifContainer">
+            <img id="cat-gif-img" src="media/cat_heart.gif" alt="">
+        </div>
+        <div class="buttonContainer">
+            <button id="no-btn">
+                No (This will make me very sad)
+            </button>
+            
+            <button id="yes-btn">
+                Yes
+            </button>
+
+        </div>
+    </div>
 </body>
 </html>
