--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will you be my valentine?</title>
     <link rel="stylesheet" href="main.css">
+    <script src="main.js" defer></script>
 </head>
 <body>
     <div class="content">
@@ -16,7 +17,7 @@
             <button id="no-btn">
                 No (This will make me very sad)
             </button>
-            
+
             <button id="yes-btn">
                 Yes
             </button>
