main CSS structure done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="content">
         <h1 id="title">Hi</h1>
         <div class="gifContainer">
-            <img id="cat-gif-img" src="media/cat_heart.gif" alt="">
+            <img id="cat-heart-gif" src="media/cat_heart.gif" alt="">
         </div>
         <div class="buttonContainer">
             <button id="no-btn">
@@ -21,7 +21,33 @@
             <button id="yes-btn">
                 Yes
             </button>
+        </div>
+    </div>
 
+    <!-- 1) On-click Popup YES -->
+    <div class="no-dialog">
+        <div class="close-btn"> <!-- Closes dialog -->
+
+        </div>
+        <div class="dramatic-cat-container">
+            <img src="media/dramatic-cat.gif" alt="" id="dramatic-cat-gif">
+        </div>
+        <div class="dialog-text">
+            <p>Very sadge.</p>
+        </div>
+    </div>
+
+    <!-- 2) On-click Popup NO -->
+    <div class="yes-dialog">
+        <button class="close-btn"> <!-- Closes dialog -->
+
+        </button>
+        <div class="happy-cat-container">
+            <img src="media/happy-cat.gif" alt="" id="happy-cat-gif">
+        </div>
+
+        <div class="dialog-text">
+            <p>Very poggers.</p>
         </div>
     </div>
 </body>
