--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
 </head>
 <body>
     <div class="content">
-        <h1 id="title">Hi</h1>
+        <div class="title">
+            <h1>Will you be my Valentine???</h1>
+            <h3>(pls I have no one else to ask)</h3>
+            <p>{\__/}</p>
+            <p>( • . •)</p>
+            <p>/ >&#9825</p>
+        </div>
+        
         <div class="gifContainer">
             <img id="cat-heart-gif" src="media/cat_heart.gif" alt="">
         </div>
         <div class="buttonContainer">
             <button id="no-btn">
-                No (This will make me very sad)
+                No 
+                <br>
+                (This will make me very sad)
             </button>
 
             <button id="yes-btn">
@@ -26,28 +35,31 @@
 
     <!-- 1) On-click Popup YES -->
     <div class="no-dialog">
-        <div class="close-btn"> <!-- Closes dialog -->
-
-        </div>
+        <button class="close-btn-no">
+            I will pick a different choice >:(
+        </button>
         <div class="dramatic-cat-container">
             <img src="media/dramatic-cat.gif" alt="" id="dramatic-cat-gif">
         </div>
         <div class="dialog-text">
-            <p>Very sadge.</p>
+            <h3>INCORRECT CHOICE, TRY AGAIN PLS >3<</h3>
         </div>
     </div>
 
     <!-- 2) On-click Popup NO -->
-    <div class="yes-dialog">
-        <button class="close-btn"> <!-- Closes dialog -->
-
+    <div class="yes-dialog" >
+        <audio id="happy-song" src="media/happy_song.mp3"></audio>
+        <button class="close-btn-yes">
+            &#x2715
         </button>
         <div class="happy-cat-container">
             <img src="media/happy-cat.gif" alt="" id="happy-cat-gif">
         </div>
 
         <div class="dialog-text">
-            <p>Very poggers.</p>
+            <h2>YAY &#9825 &#9825 &#9825 &#9825 &#9825 &#9825 &#9825 &#9825</h2>
+            <p></p>
+            <p>(Choice cannot be changed now)</p>
         </div>
     </div>
 </body>
